--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,15 @@
         android:layout_toRightOf="@+id/imageButtonGallery"
         android:layout_marginLeft="10dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewCurrLanguage"
+        android:text="@string/current_language_text"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/imageButtonGallery"
+        android:padding="10dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
