--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewCurrLanguage"
-        android:text="@string/current_language_text"
+        android:text="@string/text_view_current_language"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/imageButtonGallery"
         android:padding="10dp"/>
@@ -80,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/pictureTextViewTitle"
-            android:text="Welcome to OCR App,\nOpen Gallery or Camera to select an image"
+            android:text="@string/message_opening"
             android:layout_below="@+id/mainImageView"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
